# Orbit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODOS.md  default.profraw  test_hooks.sh  test_permission.py
.context/: codex-session-id
.opencode/: tui.jsonc
Orbit/: AppDelegate.swift  AppViewModel.swift  ContentView.swift  FloatingPanel.swift  Item.swift  OrbitApp.swift  ScreenMonitor.swift  TrayController.swift
Orbit.xcodeproj/: project.pbxproj
OrbitCLI/: SocketClient.swift  main.swift
OrbitTests/: AnomalyDetectorTests.swift  AppLaunchScenarioLoaderTests.swift  CLITests.swift  DisplayPolicyTests.swift  HistoryTests.swift  HookDebugLoggerTests.swift  HookRouterTests.swift  InstallerTests.swift  InteractionResponseTests.swift  ModelTests.swift  NotchGeometryTests.swift  OnboardingTests.swift  OrbitAccessibilityIDTests.swift  OrbitCoreTests.swift  OrbitDiagnosticsTests.swift  OrbitRuntimeDiagnosticsTests.swift  OverlayControllerTests.swift  OverlayRuntimeSnapshotTests.swift  OverlayStateMachineTests.swift  ParityGeometryTests.swift  RuntimeSizingPolicyTests.swift  SessionResumerTests.swift  SocketServerTests.swift  TodayTokenStatsTests.swift  TokenFormattingTests.swift
OrbitUITests/: OrbitUIRegressionTests.swift  OrbitUISmokeTests.swift
scripts/: debug-ui-server.py  stage-orbit-helper.sh
src/: debug.html  demo.html  index.html  main.js  permission-dialog.css  permission-dialog.html  styles.css  (+4 more)
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapter.rs  anomaly.rs  commands.rs  history.rs  hook_debug.rs  installer.rs  lib.rs  macos_hover.rs  main.rs  notch.rs  socket_server.rs  state.rs  tray.rs  usage_collector.rs
src-tauri/src/app/: conflict_dialog.rs  conflict_monitor.rs  mod.rs  onboarding.rs  permission_dialog.rs  settings.rs
src-tauri/src/tests/: mod.rs
(+82 files in other folders)
