[package]
name = "orbit"
version = "0.1.0"
edition = "2024"
default-run = "orbit"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
libc = "0.2"
parking_lot = "0.12"
log = "0.4"
pretty_env_logger = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSWindow", "NSView", "NSTrackingArea", "NSEvent"] }
raw-window-handle = "0.6"
objc2-foundation = { version = "0.3", features = ["NSValue", "NSString", "NSObject"] }

[[bin]]
name = "orbit"
path = "src/main.rs"

[[bin]]
name = "orbit-cli"
path = "src/bin/orbit_cli.rs"
